spacing fixes

--- a/components/case-studies/case-studies.module.scss
+++ b/components/case-studies/case-studies.module.scss
@@ -8,7 +8,7 @@
   padding: 7rem 3rem;
 
   @include breakpoint(medium-up) {
-    margin: 0 -7rem;
+    margin: 0 -3.5rem;
   }
 }
 
