--- a/components/ready-to-start/ready-to-start.module.scss
+++ b/components/ready-to-start/ready-to-start.module.scss
@@ -6,11 +6,8 @@
   padding: 7rem 0;
 
   @include breakpoint(medium-up) {
-    margin: 0 -7rem;
-  }
-
-  @include breakpoint(medium-up) {
-    padding: 7rem;
+    margin: 0 -3.5rem;
+    padding: 7rem 3.5rem;
   }
 
   @include breakpoint(small) {
